--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch>=0.4.1
-torchvision>=0.2.1
-dominate>=2.3.1
-visdom>=0.1.8.3
-scikit-image==0.16.2
+dominate
+opencv-python
+visdom
+scikit-image
+pytorch_msssim
+
